--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ MAILCHIMP_AUDIENCE_ID=
 BUTTONDOWN_API_URL=https://api.buttondown.email/v1/
 BUTTONDOWN_API_KEY=
 
+REVUE_API_URL=https://www.getrevue.co/api
+REVUE_API_KEY=
+
 CONVERTKIT_API_URL=https://api.convertkit.com/v3/
 CONVERTKIT_API_KEY=
 // curl https://api.convertkit.com/v3/forms?api_key=<your_public_api_key> to get your form ID 
